test(deep-understanding-of-jvm): chapter 3.2, new test case for `Cleaner` memory leak