@@ -19,13 +19,28 @@ public class FinalizeResourceTest {
         }
     }
 
+    // -Xlog:gc:time
     @Test
     void cleanerUsage() throws InterruptedException {
-        CleanerExample cleanerExample = new CleanerExample();
+        cleanerUsage(false);
+    }
+
+    // -Xlog:gc:time
+    @Test
+    void cleanerUsageViaMemoryLeak() throws InterruptedException {
+        cleanerUsage(true);
+    }
+
+    private void cleanerUsage(boolean nonStaticClass) throws InterruptedException {
+        CleanerExample cleanerExample = new CleanerExample(nonStaticClass);
         cleanerExample.execute();
 
         cleanerExample = null;
         System.gc();
         TimeUnit.SECONDS.sleep(1);
+
+        System.gc();
+        TimeUnit.SECONDS.sleep(1);
     }
+
 }
